--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% CV Jakša Tomović 06/2019 %%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%! Tex program = pdflatex
+
 \PassOptionsToPackage{dvipsnames}{xcolor}
 \documentclass[10pt,a4paper]{altacv}
 
@@ -35,22 +35,21 @@
 
 \begin{document}
 \name{Giuliano Sisto}
-\tagline{}
-%\photo{2cm}{ayoubpic}
+\tagline{
+    \href{https://www.linkedin.com/in/giuliano-sisto-8576316a/}\linkedin
+    \href{https://github.com/Giuls-droid}\github
+    \href{https://orcid.org/0000-0001-8706-4311}\orcid
+    \href{https://ieee-collabratec.ieee.org/app/myprofile/about}\ieee
+    \href{https://scholar.google.com/citations?user=LMlRN0AAAAAJ&hl=it}\scholar
+}
+%\photo{2cm}{DSC_0044.jpg}
 \personalinfo{
     \email{giuliano.sisto1@gmail.com}
     \phone{+32 470 13 63 06}
     \phone{+39 340 41 09 479}
     \mailaddress{Emile van Arenberghstraat 23}
     \location{3000, Leuven, Belgium}
-    \href{https://www.linkedin.com/in/giuliano-sisto-8576316a/}\linkedin
-    \href{https://github.com/Giuls-droid}\github
-    %\href{https://orcid.org/0000-0001-8706-4311}temp
-    %\orcid
-    %\href{https://ieee-collabratec.ieee.org/app/myprofile/about}{temp\IEEE}
-    %\href{https://scholar.google.com/citations?user=LMlRN0AAAAAJ&hl=it}{temp\Scholar}
 }
-
 %
 
 \begin{fullwidth}
@@ -146,7 +145,7 @@
 \cvsection{List of publications}
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
-    \item \small{\textbf{G.Sisto}, P. Debacker, R. Chen, G. van Der Plaas, R. Chou, E. Beyne, D. Milojevic, “Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route”, 3DIC 2019, Sendai, Japan}
+    \item[--] \small{\textbf{G.Sisto}, P. Debacker, R. Chen, G. van Der Plaas, R. Chou, E. Beyne, D. Milojevic, “Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route”, 3DIC 2019, Sendai, Japan}
 \end{itemize}
 \end{fullwidth}
 
