Add hyperlink to the email address

--- a/main.tex
+++ b/main.tex
@@ -44,11 +44,10 @@
 }
 %\photo{2cm}{DSC_0044.jpg}
 \personalinfo{
-    \email{giuliano.sisto1@gmail.com}
+    \href{mailto:giuliano.sisto1@gmail.com}\email
     \phone{+32 470 13 63 06}
     \phone{+39 340 41 09 479}
-    \mailaddress{Emile van Arenberghstraat 23}
-    \location{3000, Leuven, Belgium}
+    \location{Emile van Arenberghstraat 23, 3000, Leuven, Belgium}
 }
 %
 
