Updated CV with new publication and entries

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \PassOptionsToPackage{dvipsnames}{xcolor}
-\documentclass[10pt,a4paper]{altacv}
+\documentclass[10pt,a4paper,fancychapters]{altacv}
 
 %Layout
 \geometry{left=1cm,right=8cm,marginparwidth=6cm,marginparsep=1cm,top=1.25cm,bottom=1.25cm,footskip=2\baselineskip}
@@ -16,6 +16,7 @@
 \usepackage{textcomp}
 \usepackage{enumitem}
 \usepackage{ragged2e}
+\usepackage{csquotes}
 %Colors
 
 \definecolor{accent}{HTML}{000e17}
@@ -44,7 +45,7 @@
 }
 %\photo{2cm}{DSC_0044.jpg}
 \personalinfo{
-    \href{mailto:giuliano.sisto1@gmail.com}\email
+    \href{mailto:giuliano.sisto1@gmail.com}\email giuliano.sisto1@gmail.com 
     \phone{+32 470 13 63 06}
     \phone{+39 340 41 09 479}
     \location{Emile van Arenberghstraat 23, 3000, Leuven, Belgium}
@@ -73,6 +74,7 @@
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
     \item[--] \small{Thesis:"Design Enablement of integrated circuts using sub-5nm technology process and 3D integration"}
+    \item[--] \small{Guest lecturer - ETH Zurich, Politecnico di Bari} 
 \end{itemize}
 \medskip
 
@@ -114,6 +116,7 @@
     \item[--] \small{Advanced CMOS technology nodes (sub-5$nm$): FinFET \textbullet\hspace{0.1em} GAAFET \textbullet\hspace{0.1em} CFET}
     \item[--] \small{3D-IC: Face-to-Face Hybrid Bonding stacking}
     \item[--] \small{Industrial design benchmarking: ARM \textbullet\hspace{0.1em} RISC-V \textbullet\hspace{0.1em} NVDLA}
+    \item[--] \small{European project technical lead for 2nm technology node research}
 \end{itemize}
 
 
@@ -144,7 +147,9 @@
 \cvsection{List of publications}
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
-    \item[--] \small{\textbf{G.Sisto}, P. Debacker, R. Chen, G. van Der Plaas, R. Chou, E. Beyne, D. Milojevic, “Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route”, 3DIC 2019, Sendai, Japan}
+    \item[--] \small{\textbf{G.Sisto}, P. Debacker, R. Chen, G. Van der Plas, R. Chou, E. Beyne, D. Milojevic, ``Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route'', 3DIC 2019, Sendai, Japan}
+    \item[--] \small{\textbf{G.Sisto} et al., ``IR-Drop Analysis of Hybrid Bonded 3D-ICs with Backside Power Delivery and
+    $\mu$- \& $n$- TSVs'', IITC 2021, Kyoto, Japan} 
 \end{itemize}
 \end{fullwidth}
 
