Aggiunto IEDM paper alla List of Publications

--- a/main.tex
+++ b/main.tex
@@ -138,18 +138,15 @@
 
 \cvevent{Event organizing team}{Devlounge}{Sep 2016 -- Nov 2016}{Bari, IT}
 
-\begin{itemize}
-    \setlength{\itemindent}{0.5em}
-    \item[--]  \small {Technical support to comics convention: Hardware management \textbullet\hspace{0.1em} Ordering service}
-\end{itemize}
-
 \begin{fullwidth}
 \cvsection{List of publications}
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
+    \item[--] \small{\textbf{G.Sisto}, R.Chen, et al., ``Design and Optimization of SRAM Macro and Logic Using Backside
+    Interconnects at 2nm Node'', IEDM 2021, San Francisco, USA} 
+    \item[--] \small{\textbf{G.Sisto} et al., ``IR-Drop Analysis of Hybrid Bonded 3D-ICs with Backside Power Delivery
     \item[--] \small{\textbf{G.Sisto}, P. Debacker, R. Chen, G. Van der Plas, R. Chou, E. Beyne, D. Milojevic, ``Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route'', 3DIC 2019, Sendai, Japan}
-    \item[--] \small{\textbf{G.Sisto} et al., ``IR-Drop Analysis of Hybrid Bonded 3D-ICs with Backside Power Delivery and
-    $\mu$- \& $n$- TSVs'', IITC 2021, Kyoto, Japan} 
+    and $\mu$- \& $n$- TSVs'', IITC 2021, Kyoto, Japan} 
 \end{itemize}
 \end{fullwidth}
 
