--- a/main.tex
+++ b/main.tex
@@ -102,13 +102,22 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \cvsection{Experience}
+\cvevent{Researcher}{IMEC}{Nov 2021 -- Present}{Leuven, BE}
 
+%\begin{itemize}
+%    \setlength{\itemindent}{0.5em}
+%    \item[--] \small{Proposal and implementation of new methods to enable advanced technologies for front-end and back-end digital IC design}
+%    \item[--] \small{Advanced CMOS technology nodes (sub-5$nm$): FinFET \textbullet\hspace{0.1em} GAAFET \textbullet\hspace{0.1em} CFET}
+%    \item[--] \small{3D-IC: Face-to-Face Hybrid Bonding stacking}
+%    \item[--] \small{Industrial design benchmarking: ARM \textbullet\hspace{0.1em} RISC-V \textbullet\hspace{0.1em} NVDLA}
+%    \item[--] \small{European project technical lead for 2nm technology node research}
+%\end{itemize}
 
 %%%%%%%%%%%%%
 %Experience 1
 %%%%%%%%%%%%%
 
-\cvevent{PhD Candidate}{Cadence Design Systems - IMEC}{Oct 2018 -- Present}{Leuven, BE}
+\cvevent{PhD Candidate}{Cadence Design Systems - IMEC}{Oct 2018 -- Nov 2021}{Leuven, BE}
 
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
@@ -136,17 +145,19 @@
 %Project 2
 %%%%%%%%%%%%%
 
-\cvevent{Event organizing team}{Devlounge}{Sep 2016 -- Nov 2016}{Bari, IT}
+%\cvevent{Event organizing team}{Devlounge}{Sep 2016 -- Nov 2016}{Bari, IT}
 
 \begin{fullwidth}
 \cvsection{List of publications}
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
-    \item[--] \small{\textbf{G.Sisto}, R.Chen, et al., ``Design and Optimization of SRAM Macro and Logic Using Backside
-    Interconnects at 2nm Node'', IEDM 2021, San Francisco, USA} 
-    \item[--] \small{\textbf{G.Sisto} et al., ``IR-Drop Analysis of Hybrid Bonded 3D-ICs with Backside Power Delivery
+    \item[--] \small{R.Chen, \textbf{G.Sisto}*,  et al., ``Design and Optimization of SRAM Macro and Logic Using Backside
+    Interconnects at 2nm Node'', IEDM 2021, San Francisco, USA (*authors contributed equally to the work)} 
+    \item[--] \small{\textbf{G.Sisto}, R. Chen, R. Chou, G. Van der Plas, E. Beyne, R. Metcalfe, D. Milojevic, ``Design
+    And Signoff Methodologies For Wafer-To-Wafer Bonded 3D-ICs At Advanced Nodes", SLIP 2021 (co-hosted with ICCAD
+    2021), Virtual} 
+    \item[--] \small{\textbf{G.Sisto} et al., ``IR-Drop Analysis of Hybrid Bonded 3D-ICs with Backside Power Delivery and $\mu$- \& $n$- TSVs'', IITC 2021, Kyoto, Japan} 
     \item[--] \small{\textbf{G.Sisto}, P. Debacker, R. Chen, G. Van der Plas, R. Chou, E. Beyne, D. Milojevic, ``Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route'', 3DIC 2019, Sendai, Japan}
-    and $\mu$- \& $n$- TSVs'', IITC 2021, Kyoto, Japan} 
 \end{itemize}
 \end{fullwidth}
 
