fixed PhD end date

--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@
 %Formation 1
 %%%%%%%%%%%%%
 
-\cvevent{Doctor of Philosophy (PhD), Electrical Engineering}{Ecole polytechnique de Bruxelles -- Université Libre de Bruxelles }{Oct 2018 -- Oct 2021(expected)}{Leuven, BE}
+\cvevent{Doctor of Philosophy (PhD), Electrical Engineering}{Ecole polytechnique de Bruxelles -- Université Libre de Bruxelles }{Oct 2018 -- 2022(expected)}{Leuven, BE}
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
     \item[--] \small{Thesis:"Design Enablement of integrated circuts using sub-5nm technology process and 3D integration"}
