Add CV variant and fix publications in 1 page

--- a/main.tex
+++ b/main.tex
@@ -84,10 +84,7 @@
 
 \cvevent{Exchange Student, Electronic Systems}{Department of Electrical Engineering
  -- Technology University of Eindhoven }{Feb 2017 -- July 2017}{Eindhoven, NL}
- \begin{itemize}
-    \setlength{\itemindent}{0.5em}
-    \item[--] \small{Projects: RISC microprocessor design \textbullet\hspace{0.1em} interconnection network modelling for a multicore processor \textbullet\hspace{0.1em} embedded controller design for automotive (Xilinx FPGA) \textbullet\hspace{0.1em} low power RF mixer design}
-\end{itemize}
+
 
 \medskip
 %%%%%%%%%%%%%
@@ -117,13 +114,13 @@
 %Experience 1
 %%%%%%%%%%%%%
 
-\cvevent{PhD Candidate}{Cadence Design Systems - IMEC}{Oct 2018 -- Nov 2021}{Leuven, BE}
+\cvevent{PhD Candidate}{Cadence Design Systems - IMEC}{Oct 2018 -- 2021}{Leuven, BE}
 
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
     \item[--] \small{Proposal and implementation of new methods to enable advanced technologies for front-end and back-end digital IC design}
-    \item[--] \small{Advanced CMOS technology nodes (sub-5$nm$): FinFET \textbullet\hspace{0.1em} GAAFET \textbullet\hspace{0.1em} CFET}
-    \item[--] \small{3D-IC: Face-to-Face Hybrid Bonding stacking}
+    \item[--] \small{Advanced CMOS technology nodes (sub-5$nm$ FinFET \textbullet\hspace{0.1em} GAAFET
+    \textbullet\hspace{0.1em} CFET) and 3D-IC}
     \item[--] \small{Industrial design benchmarking: ARM \textbullet\hspace{0.1em} RISC-V \textbullet\hspace{0.1em} NVDLA}
     \item[--] \small{European project technical lead for 2nm technology node research}
 \end{itemize}
@@ -151,13 +148,15 @@
 \cvsection{List of publications}
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
-    \item[--] \small{R.Chen, \textbf{G.Sisto}*,  et al., ``Design and Optimization of SRAM Macro and Logic Using Backside
+    \item[--] \small{R.Chen, \textbf{G.Sisto}*  et al., ``Design and Optimization of SRAM Macro and Logic Using Backside
     Interconnects at 2nm Node'', IEDM 2021, San Francisco, USA (*authors contributed equally to the work)} 
-    \item[--] \small{\textbf{G.Sisto}, R. Chen, R. Chou, G. Van der Plas, E. Beyne, R. Metcalfe, D. Milojevic, ``Design
+    \item[--] \small{\textbf{G.Sisto}  et al., ``Design And Sign-off Methodologies For
+    Wafer-To-Wafer Bonded 3D-ICs At Advanced Nodes (invited)'', SLIP 2021 (co-hosted with ICCAD 2021), Virtual Event} 
+    \item[--] \small{\textbf{G.Sisto} et al., ``Design
     And Signoff Methodologies For Wafer-To-Wafer Bonded 3D-ICs At Advanced Nodes", SLIP 2021 (co-hosted with ICCAD
     2021), Virtual} 
     \item[--] \small{\textbf{G.Sisto} et al., ``IR-Drop Analysis of Hybrid Bonded 3D-ICs with Backside Power Delivery and $\mu$- \& $n$- TSVs'', IITC 2021, Kyoto, Japan} 
-    \item[--] \small{\textbf{G.Sisto}, P. Debacker, R. Chen, G. Van der Plas, R. Chou, E. Beyne, D. Milojevic, ``Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route'', 3DIC 2019, Sendai, Japan}
+    \item[--] \small{\textbf{G.Sisto} et al., ``Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route'', 3DIC 2019, Sendai, Japan}
 \end{itemize}
 \end{fullwidth}
 
