--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -62,7 +62,7 @@
  \cvtag{Videogames}
  \cvtag{Board/Card games}
  \cvtag{eSports}
- \cvtag{Football}
+ \cvtag{Soccer}
  \cvtag{Cinema}
  \cvtag{Travel}
  \cvtag{Music}
