--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
 \name{Giuliano Sisto}
 \tagline{
     \href{https://www.linkedin.com/in/giuliano-sisto-8576316a/}\linkedin
-    \href{https://github.com/Giuls-droid}\github
+    \href{https://github.com/Giuls-droid/Curriculum/blob/master/main.pdf}\github
     \href{https://orcid.org/0000-0001-8706-4311}\orcid
     \href{https://ieee-collabratec.ieee.org/app/myprofile/about}\ieee
     \href{https://scholar.google.com/citations?user=LMlRN0AAAAAJ&hl=it}\scholar
@@ -48,7 +48,7 @@
     \href{mailto:giuliano.sisto1@gmail.com}\email giuliano.sisto1@gmail.com 
     \phone{+32 470 13 63 06}
     \phone{+39 340 41 09 479}
-    \location{Emile van Arenberghstraat 23, 3000, Leuven, Belgium}
+    \location{Brusselsestraat 278, 3000, Leuven, Belgium}
 }
 %
 
@@ -148,13 +148,13 @@
 \cvsection{List of publications}
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
-    \item[--] \small{R.Chen, \textbf{G.Sisto}*  et al., ``Design and Optimization of SRAM Macro and Logic Using Backside
+    \item[--] \small{\textbf{G.Sisto}*,  et al., ``Evaluation of Nanosheet and Forksheet Width Modulation for Digital IC
+    Design in the Sub-3nm Era'', IEEE Transactions on Very Large Scale Integration (VLSI) Systems, vol. 30, no. 10, pp.
+    1497-1506, Oct. 2022} 
+    \item[--] \small{R.Chen, \textbf{G.Sisto}*,  et al., ``Design and Optimization of SRAM Macro and Logic Using Backside
     Interconnects at 2nm Node'', IEDM 2021, San Francisco, USA (*authors contributed equally to the work)} 
     \item[--] \small{\textbf{G.Sisto}  et al., ``Design And Sign-off Methodologies For
-    Wafer-To-Wafer Bonded 3D-ICs At Advanced Nodes (invited)'', SLIP 2021 (co-hosted with ICCAD 2021), Virtual Event} 
-    \item[--] \small{\textbf{G.Sisto} et al., ``Design
-    And Signoff Methodologies For Wafer-To-Wafer Bonded 3D-ICs At Advanced Nodes", SLIP 2021 (co-hosted with ICCAD
-    2021), Virtual} 
+    Wafer-To-Wafer Bonded 3D-ICs At Advanced Nodes (invited)'', SLIP 2021 (co-hosted with ICCAD 2021), Virtual Event}
     \item[--] \small{\textbf{G.Sisto} et al., ``IR-Drop Analysis of Hybrid Bonded 3D-ICs with Backside Power Delivery and $\mu$- \& $n$- TSVs'', IITC 2021, Kyoto, Japan} 
     \item[--] \small{\textbf{G.Sisto} et al., ``Design enablement of fine pitch face-to-face 3D system integration using die-by-die place \& route'', 3DIC 2019, Sendai, Japan}
 \end{itemize}
