--- a/main.tex
+++ b/main.tex
@@ -148,7 +148,7 @@
 \cvsection{List of publications}
 \begin{itemize}
     \setlength{\itemindent}{0.5em}
-    \item[--] \small{\textbf{G.Sisto}*,  et al., ``Evaluation of Nanosheet and Forksheet Width Modulation for Digital IC
+    \item[--] \small{\textbf{G.Sisto},  et al., ``Evaluation of Nanosheet and Forksheet Width Modulation for Digital IC
     Design in the Sub-3nm Era'', IEEE Transactions on Very Large Scale Integration (VLSI) Systems, vol. 30, no. 10, pp.
     1497-1506, Oct. 2022} 
     \item[--] \small{R.Chen, \textbf{G.Sisto}*,  et al., ``Design and Optimization of SRAM Macro and Logic Using Backside
