--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -28,6 +28,8 @@
 \cvtag{Resilience}
 \cvtag{Problem solving}
 \cvtag{Project management}
+\cvtag{People management}
+\cvtag{Mentoring}
 \cvtag{Empathy}
 \cvtag{Affinity to learn}
 \cvtag{Team player}
@@ -48,7 +50,7 @@
 %Certificat1
 %%%%%%%%%%%%%
 \cvaward{ERASMUS+ for Traineeship Scholarship}{TUCEP}{2018}{Bari,IT}
-%\cvaward{ERASMUS+ Scholarship}{Politecnico di Bari}{2017}{Bari,IT}
+\cvaward{ERASMUS+ Scholarship}{Politecnico di Bari}{2017}{Bari,IT}
 
 %%%%%%%%%%%%%
 %Certificat 2
@@ -66,3 +68,4 @@
  \cvtag{Cinema}
  \cvtag{Travel}
  \cvtag{Music}
+ \cvtag{Photography}
