Small updates and switched Experience/Education

--- a/main.tex
+++ b/main.tex
@@ -60,11 +60,72 @@
 \end{fullwidth}
 
 %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Experience Professionnelles
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cvsection[page1sidebar]{Experience}
+
+\cvevent{Chiplet Solution Architect}{IMEC}{Sep 2023 -- Present}{Leuven, BE}
+\setlength{\itemindent}{0.5em}
+\begin{itemize}
+    \item[--] \small{Drive system architecture development with 2.5D and 3D technologies}
+    \item[--] \small{Next generation HPC systems for AI}
+\end{itemize}
+
+%%%%%%%%%%%%%
+%Experience 1
+%%%%%%%%%%%%%
+
+\cvevent{Researcher}{IMEC}{Nov 2021 -- August 2023}{Leuven, BE}
+\begin{itemize}
+    \setlength{\itemindent}{0.5em}
+    \item[--] \small{Backside PDN and functional Backside pathfinding}
+    \item[--] \small{HW-SW co-design methodologies for STCO}
+\end{itemize}
+
+%\begin{itemize}
+%    \setlength{\itemindent}{0.5em}
+%    \item[--] \small{Proposal and implementation of new methods to enable advanced technologies for front-end and back-end digital IC design}
+%    \item[--] \small{Advanced CMOS technology nodes (sub-5$nm$): FinFET \textbullet\hspace{0.1em} GAAFET \textbullet\hspace{0.1em} CFET}
+%    \item[--] \small{3D-IC: Face-to-Face Hybrid Bonding stacking}
+%    \item[--] \small{Industrial design benchmarking: ARM \textbullet\hspace{0.1em} RISC-V \textbullet\hspace{0.1em} NVDLA}
+%    \item[--] \small{European project technical lead for 2nm technology node research}
+%\end{itemize}
+
+%%%%%%%%%%%%%
+%Experience 1
+%%%%%%%%%%%%%
+
+\cvevent{Doctoral Researcher}{Cadence Design Systems - IMEC}{Oct 2018 -- 2021}{Leuven, BE}
+\begin{itemize}
+    \setlength{\itemindent}{0.5em}
+    \item[--] \small{Proposal and implementation of new methods to enable DTCO and 3D IC design}
+%    \item[--] \small{Advanced CMOS technology nodes (sub-5$nm$ FinFET \textbullet\hspace{0.1em} GAAFET
+%    \textbullet\hspace{0.1em} CFET) and 3D-IC}
+%   \item[--] \small{Industrial design benchmarking: ARM \textbullet\hspace{0.1em} RISC-V \textbullet\hspace{0.1em} NVDLA}
+    \item[--] \small{European project technical lead for 2nm technology node research}
+\end{itemize}
+
+
+%%%%%%%%%%%%%
+%Project 1
+%%%%%%%%%%%%%
+
+\cvevent{Engineering Internship}{Huawei Technologies}{Feb 2018 -- Jul 2018}{Sophia-Antipolis, FR}
+
+\begin{itemize}
+    \setlength{\itemindent}{0.5em}
+    \item[--]  \small {Architecture design and physical implementation of digital filters for All Digital PLLs}
+    
+\end{itemize}
+
+%%%%%%%%%%%%%
+%Project 2
+%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Formation
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\cvsection[page1sidebar]{Education}
+\cvsection{Education}
 
 %%%%%%%%%%%%%
 %Formation 1
@@ -100,69 +161,6 @@
 \end{itemize}
 
 \medskip
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Experience Professionnelles
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\cvsection{Experience}
-
-\cvevent{Chiplet Solution Architect}{IMEC}{Sep 2023 -- Present}{Leuven, BE}
-\setlength{\itemindent}{0.5em}
-\begin{itemize}
-    \item[--] \small{Drive system architecture development with 2.5D and 3D technologies}
-    \item[--] \small{Next generation HPC systems for AI}
-\end{itemize}
-
-%%%%%%%%%%%%%
-%Experience 1
-%%%%%%%%%%%%%
-
-\cvevent{Researcher}{IMEC}{Nov 2021 -- August 2023}{Leuven, BE}
-\begin{itemize}
-    \setlength{\itemindent}{0.5em}
-    \item[--] \small{Backside PDN and functional Backside pathfinding}
-    \item[--] \small{HW-SW co-design methodologies for STCO}
-\end{itemize}
-
-%\begin{itemize}
-%    \setlength{\itemindent}{0.5em}
-%    \item[--] \small{Proposal and implementation of new methods to enable advanced technologies for front-end and back-end digital IC design}
-%    \item[--] \small{Advanced CMOS technology nodes (sub-5$nm$): FinFET \textbullet\hspace{0.1em} GAAFET \textbullet\hspace{0.1em} CFET}
-%    \item[--] \small{3D-IC: Face-to-Face Hybrid Bonding stacking}
-%    \item[--] \small{Industrial design benchmarking: ARM \textbullet\hspace{0.1em} RISC-V \textbullet\hspace{0.1em} NVDLA}
-%    \item[--] \small{European project technical lead for 2nm technology node research}
-%\end{itemize}
-
-%%%%%%%%%%%%%
-%Experience 1
-%%%%%%%%%%%%%
-
-\cvevent{PhD Candidate}{Cadence Design Systems - IMEC}{Oct 2018 -- 2021}{Leuven, BE}
-\begin{itemize}
-    \setlength{\itemindent}{0.5em}
-    \item[--] \small{Proposal and implementation of new methods to enable DTCO and 3D IC design}
-%    \item[--] \small{Advanced CMOS technology nodes (sub-5$nm$ FinFET \textbullet\hspace{0.1em} GAAFET
-%    \textbullet\hspace{0.1em} CFET) and 3D-IC}
-%   \item[--] \small{Industrial design benchmarking: ARM \textbullet\hspace{0.1em} RISC-V \textbullet\hspace{0.1em} NVDLA}
-    \item[--] \small{European project technical lead for 2nm technology node research}
-\end{itemize}
-
-
-%%%%%%%%%%%%%
-%Project 1
-%%%%%%%%%%%%%
-
-\cvevent{Engineering Internship}{Huawei Technologies}{Feb 2018 -- Jul 2018}{Sophia-Antipolis, FR}
-
-\begin{itemize}
-    \setlength{\itemindent}{0.5em}
-    \item[--]  \small {Architecture design and physical implementation of digital filters for All Digital PLLs}
-    
-\end{itemize}
-
-%%%%%%%%%%%%%
-%Project 2
-%%%%%%%%%%%%%
 
 %\cvevent{Event organizing team}{Devlounge}{Sep 2016 -- Nov 2016}{Bari, IT}
 \newpage
