--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -25,10 +25,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \cvsection{Soft Skills}
-\cvtag{Resilience}
-\cvtag{Problem solving}
-\cvtag{Project management}
-\cvtag{People management}
+\cvtag{Problem-solving}
+\cvtag{Project/People management}
 \cvtag{Mentoring}
 \cvtag{Empathy}
 \cvtag{Affinity to learn}
