--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,7 @@
 \setlength{\itemindent}{0.5em}
 \begin{itemize}
     \item[--] \small{Drive system architecture development with 2.5D and 3D technologies}
-    \item[--] \small{Next generation HPC systems for AI}
+    \item[--] \small{Next generation HPC systems for AI and FPGA prototyping}
 \end{itemize}
 
 %%%%%%%%%%%%%
