--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -13,10 +13,9 @@
 \cvskill{TCL}{4}
 \cvskill{Bash}{4}
 \cvskill{Linux}{4}
-\cvskill{Verilog, VHDL}{2}
-\cvskill{Python}{2}
+\cvskill{(System)Verilog}{3}
+\cvskill{Python}{3}
 \cvskill{Git}{3}
-\cvskill{Matlab}{3}
 %\cvskill{C}{1}
 %\cvskill{C++}{1}
 \smallskip
