--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,21 @@
 
 \cvsection[page1sidebar]{Experience}
 
-\cvevent{Chiplet Solution Architect}{IMEC}{Sep 2023 -- Present}{Leuven, BE}
+%%%%%%%%%%%%%
+%Experience 1
+%%%%%%%%%%%%%
+
+\cvevent{R\&D Project Leader}{IMEC}{Jul 2024 -- Present}{Leuven, BE}
+\begin{itemize}
+    \setlength{\itemindent}{0.5em}
+    \item[--] \small{Define roadmap and specifications for a chiplets platform}
+\end{itemize}
+
+%%%%%%%%%%%%%
+%Experience 2
+%%%%%%%%%%%%%
+
+\cvevent{Chiplet Solution Architect}{IMEC}{Sep 2023 -- Jul 2024}{Leuven, BE}
 \setlength{\itemindent}{0.5em}
 \begin{itemize}
     \item[--] \small{Drive system architecture development with 2.5D and 3D technologies}
@@ -73,7 +87,7 @@
 \end{itemize}
 
 %%%%%%%%%%%%%
-%Experience 1
+%Experience 3
 %%%%%%%%%%%%%
 
 \cvevent{Researcher}{IMEC}{Nov 2021 -- August 2023}{Leuven, BE}
